fix(mobile): prevent resume preview from squishing

--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -37,6 +37,14 @@
   width: calc(100% - 150px);
 }
 
+@media (max-width: 720px) {
+  .resume-preview {
+    width: 100%;
+    height: 80vh;
+    min-height: 520px;
+  }
+}
+
 .resume-pdf {
   display: block;
   width: 100%;
